Debugging Chrome mobile layout issue

--- a/src/components/CardList/card.css
+++ b/src/components/CardList/card.css
@@ -83,7 +83,8 @@
   }
 
   .scene {
-    -webkit-transform: translate(1.180%, 0%);
+    /*-webkit-transform: translate(1.180%, 0%);*/
+    -webkit-transform: translate(1.75%, 0%);
   }
 }
 
